--- a/index.html
+++ b/index.html
@@ -171,18 +171,18 @@
                   <div class="seo_price_item_content">
                     <h4>Что входит:</h4>
                     <ul class="d-flex flex-column">
-                      <li>
+                      <li class="d-flex align-items-center">
                         <img src="assets/images/true_light.svg" alt="" />
                         <span>Проверка всех страниц сайта</span>
                       </li>
-                      <li>
+                      <li class="d-flex align-items-center">
                         <img src="assets/images/true_light.svg" alt="" />
                         <span
                           >Анализ сайта человеком с использованием
                           сервисов</span
                         >
                       </li>
-                      <li>
+                      <li class="d-flex align-items-center">
                         <img src="assets/images/true_light.svg" alt="" />
                         <span
                           >Анализ сайта по 46 важнейших SEO параметрам сайта и
@@ -190,7 +190,7 @@
                           конкурентов</span
                         >
                       </li>
-                      <li>
+                      <li class="d-flex align-items-center">
                         <img src="assets/images/true_light.svg" alt="" />
                         <span>SEO отчет по сайту в Excel таблице</span>
                       </li>
@@ -202,7 +202,7 @@
                         нарушений
                       </p>
                       <ul>
-                        <li>
+                        <li class="d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="20"
@@ -225,7 +225,7 @@
                           </svg>
                           <span>Консультация от SEO специалиста (1 час)</span>
                         </li>
-                        <li>
+                        <li class="d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="20"
@@ -248,7 +248,7 @@
                           </svg>
                           <span>Консультация от SEO специалиста (1 час)</span>
                         </li>
-                        <li>
+                        <li class="d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="20"
@@ -271,7 +271,7 @@
                           </svg>
                           <span>Анализ сайтов конкурентов</span>
                         </li>
-                        <li>
+                        <li class="d-flex align-items-center">
                           <svg
                             xmlns="http://www.w3.org/2000/svg"
                             width="20"
@@ -305,7 +305,9 @@
                   class="seo_price_item_bottom d-flex justify-content-between align-items-center"
                 >
                   <li><a href="#" class="link_btn">10 000 ₽</a></li>
-                  <li><a href="#" class="button">Попробовать бесплатно</a></li>
+                  <li>
+                    <a href="#" class="button no_bg">Заказать</a>
+                  </li>
                 </ul>
               </div>
             </div>
