--- a/index.html
+++ b/index.html
@@ -460,16 +460,42 @@
                   <a href="#" class="button no_bg">Развернуть текст</a>
                 </div>
                 <div class="item_image">
-                  <img src="assets/images/seo_page_img1.png" alt="" />
                   <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                  <picture>
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="assets/images/seo_img.png"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="assets/images/seo_page_img1.png"
+                    />
+                    <img
+                      src="assets/images/seo_page_img1.png"
+                      alt="Adaptiv rasm"
+                    />
+                  </picture>
                 </div>
               </div>
               <div
                 class="analytics_page_item d-flex align-items-center justify-content-between"
               >
                 <div class="item_image">
-                  <img src="assets/images/seo_page_img1.png" alt="" />
                   <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                  <picture>
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="assets/images/seo_img.png"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="assets/images/seo_page_img1.png"
+                    />
+                    <img
+                      src="assets/images/seo_page_img1.png"
+                      alt="Adaptiv rasm"
+                    />
+                  </picture>
                 </div>
                 <div class="analytics_page_item_left">
                   <h2 class="section_title text-end">
