--- a/index.html
+++ b/index.html
@@ -911,7 +911,7 @@
             </div>
           </div>
         </section>
-        <div class="faq">
+        <section class="faq">
           <div class="container">
             <h2 class="section_title">
               Вопросы и Ответы об анализе сайтов SEO онлайн
@@ -1013,7 +1013,7 @@
               </div>
             </div>
           </div>
-        </div>
+        </section>
         <section class="blog">
           <div class="container">
             <div
