--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                   <div class="seo_price_item_top d-flex flex-column">
                     <p class="text-center">SEO аудит (ручной)</p>
                     <h4 class="text-center">
-                      Подойдет если сайт еще не продвигался в поиске
+                      Подойдет если требуется профессиональное продвижение сайта
                     </h4>
                   </div>
                   <div class="seo_price_item_content">
@@ -180,6 +180,13 @@
                         <span
                           >Анализ сайта человеком с использованием
                           сервисов</span
+                        >
+                      </li>
+                      <li class="d-flex align-items-center">
+                        <img src="assets/images/true_light.svg" alt="" />
+                        <span
+                          >Анализ каждой потенциальной SEO ошибки по
+                          расширенному набору признаков</span
                         >
                       </li>
                       <li class="d-flex align-items-center">
