--- a/index.html
+++ b/index.html
@@ -521,6 +521,100 @@
                   <a href="#" class="button no_bg">Развернуть текст</a>
                 </div>
               </div>
+              <div
+                class="analytics_page_item d-flex align-items-center justify-content-between"
+              >
+                <div class="analytics_page_item_left">
+                  <h2 class="section_title">
+                    <span>03.</span> Анализ
+                    <a href="#" class="button">Title</a>
+                    <br />
+                    заголовка страницы сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
+                  </h2>
+                  <p class="hiden_text">
+                    &lt;h2&gt;Зачем заголовок Title важен для SEO анализа сайта
+                    [wt_location get='region_name_prepositional']
+                    {get}&lt;/h2&gt; &lt;p&gt;Заголовок страницы — это HTML-тег
+                    &lt;strong&gt;Title&lt;/strong&gt;, который имеет ключевое
+                    значение для SEO. Он отображается в поисковой выдаче,
+                    вкладке браузера и помогает поисковым системам понять
+                    содержание страницы. Правильный Title повышает позиции
+                    сайта.&lt;/p&gt; &lt;h2&gt;Что такое Title в SEO анализе
+                    сайта [wt_location get='region_name_prepositional'] {get} и
+                    почему его стоит оптимизировать&lt;/h2&gt; &lt;p&gt;Title —
+                    это краткое название страницы, которое определяет её суть
+                    для поисковых систем и пользователей. Грамотный Title
+                    помогает улучшить кликабельность (CTR) и влияет на вид
+                    сниппета в результатах поиска.&lt;/p&gt; &lt;h2&gt;Как Title
+                    влияет на результаты SEO анализа сайта [wt_location
+                    get='region_name_prepositional'] {get}&lt;/h2&gt; &lt;ul&gt;
+                    &lt;li&gt;&lt;strong&gt;SEO-эффективность&lt;/strong&gt;&lt;br&gt;Хорошо
+                    оптимизированный Title помогает сайту продвигаться по
+                    целевым запросам в поисковых системах.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Повышение
+                    кликабельности&lt;/strong&gt;&lt;br&gt;Привлекательный
+                    заголовок мотивирует пользователей кликнуть на результат в
+                    выдаче, увеличивая трафик на сайт.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Навигационная
+                    польза&lt;/strong&gt;&lt;br&gt;Понятный Title помогает
+                    пользователю заранее понять содержание страницы, ещё до
+                    перехода на неё.&lt;/li&gt; &lt;/ul&gt; &lt;h2&gt;Какие
+                    параметры Title учитываются при SEO проверке сайта
+                    [wt_location get='region_name_prepositional']
+                    {get}&lt;/h2&gt; &lt;ul&gt; &lt;li&gt;&lt;strong&gt;Длина
+                    заголовка&lt;/strong&gt;: от 30 до 60 символов — оптимальный
+                    диапазон для отображения в поисковой выдаче.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Позиция ключевых
+                    слов&lt;/strong&gt;: начинайте заголовок с ключевых фраз для
+                    лучшей релевантности.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Уникальность&lt;/strong&gt;: каждый
+                    Title должен быть уникален и не повторяться на других
+                    страницах.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Чёткость&lt;/strong&gt;: заголовок
+                    должен точно и ясно передавать тему страницы.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Указание региона&lt;/strong&gt;: для
+                    локального SEO полезно включить упоминание региона, если это
+                    релевантно.&lt;/li&gt; &lt;/ul&gt; &lt;h2&gt;Как провести
+                    анализ Title на сайте [wt_location
+                    get='region_name_prepositional'] {get} с помощью SEO
+                    инструментов&lt;/h2&gt; &lt;ul&gt;
+                    &lt;li&gt;&lt;strong&gt;Проверка вручную&lt;/strong&gt;:
+                    заголовок можно увидеть в исходном коде страницы или в
+                    заголовке вкладки браузера.&lt;/li&gt;
+                    &lt;li&gt;&lt;strong&gt;Автоматическая
+                    проверка&lt;/strong&gt;: используйте SEO-анализаторы и
+                    браузерные расширения для массового анализа всех Title на
+                    сайте.&lt;/li&gt; &lt;/ul&gt; &lt;h2&gt;Почему важно
+                    использовать программы для аудита Title на сайте
+                    [wt_location get='region_name_prepositional']
+                    {get}&lt;/h2&gt; &lt;p&gt;Регулярный SEO аудит с помощью
+                    специализированных сервисов позволяет отслеживать ошибки в
+                    заголовках Title, корректировать их длину, уникальность и
+                    релевантность, что напрямую влияет на позиции сайта в поиске
+                    и восприятие пользователями.&lt;/p&gt;
+                  </p>
+
+                  <a href="#" class="button no_bg">Развернуть текст</a>
+                </div>
+                <div class="item_image">
+                  <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                  <picture>
+                    <source
+                      media="(max-width: 767px)"
+                      srcset="assets/images/seo_img.png"
+                    />
+                    <source
+                      media="(min-width: 768px)"
+                      srcset="assets/images/seo_page_img1.png"
+                    />
+                    <img
+                      src="assets/images/seo_page_img1.png"
+                      alt="Adaptiv rasm"
+                    />
+                  </picture>
+                </div>
+              </div>
             </div>
           </div>
         </section>
