--- a/index.html
+++ b/index.html
@@ -504,16 +504,296 @@
                   </h2>
 
                 </div>
-                <p class="hiden_text text-end">
-                  Аудит мета-описания сайта важен для того, чтобы убедиться,
-                  что описание точно отражает содержимое страницы и
-                  соответствует поисковым запросам. Это помогает улучшить
-                  видимость сайта в поисковой выдаче и повысить его
-                  кликабельность.
-                </p>
+                <div class="hiden_text text-end">
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как анализ мета-описания страницы сайта улучшает SEO продвижение</h2>
+                  <p>Meta Description (мета-описание) — это краткое и ёмкое описание страницы, которое помогает
+                    поисковым системам и пользователям понять её содержание. Хорошо составленное описание увеличивает
+                    шансы на переход по ссылке и положительно влияет на SEO.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как аудит мета-описания сайта помогает повысить SEO результаты</h2>
+                  <p>Аудит мета-описания помогает убедиться, что описание точно отражает содержание страницы и
+                    соответствует ключевым запросам, что влияет на улучшение видимости и кликабельности сайта в
+                    поисковых системах.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как проверка мета-описания сайта способствует увеличению кликабельности</h2>
+                  <p>Проверка мета-описания позволяет убедиться, что описание привлекательно для пользователей и
+                    соответствует их поисковым запросам, что приводит к росту CTR (кликабельности) и повышению позиций
+                    страницы.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как SEO анализ мета-описания сайта влияет на повышение позиций в поисковой выдаче</h2>
+                  <p>SEO анализ мета-описания помогает понять, насколько эффективно оно поддерживает продвижение
+                    страницы. Качественное мета-описание улучшает видимость страницы и увеличивает шанс на успешное
+                    продвижение.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Почему SEO аудит мета-описания сайта так важен для релевантности</h2>
+                  <p>SEO аудит мета-описания помогает убедиться, что описание точно отражает ключевые запросы, что
+                    напрямую влияет на релевантность страницы и её успешность в поисковой выдаче.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как SEO проверка мета-описания сайта улучшает пользовательский опыт</h2>
+                  <p>SEO проверка мета-описания помогает убедиться, что оно понятное и информативное для пользователей,
+                    что снижает вероятность отказов и способствует лучшему взаимодействию с сайтом.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как провести бесплатный анализ мета-описания сайта с использованием онлайн инструментов</h2>
+                  <p>Используя онлайн инструменты, можно бесплатно проанализировать мета-описание и получить
+                    рекомендации для его улучшения, что поможет повысить эффективность SEO стратегии.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как анализ мета-описания онлайн для сайта помогает точно оценить SEO потенциал</h2>
+                  <p>Онлайн анализ мета-описания помогает быстро выявить ошибки и определить, насколько хорошо описание
+                    выполняет свою роль в SEO, что способствует улучшению позиций страницы.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как аудит мета-описания помогает в продвижении сайта</h2>
+                  <p>Аудит мета-описания помогает найти слабые места в тексте и внести коррективы, что повысит
+                    эффективность продвижения сайта в поисковых системах и улучшит его видимость.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Почему SEO аудит мета-описания сайта важен для повышения кликабельности</h2>
+                  <p>SEO аудит мета-описания помогает оптимизировать описание, сделав его более привлекательным для
+                    пользователей, что увеличивает кликабельность и улучшает позиции страницы.</p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как SEO анализ мета-описания сайта влияет на CTR (кликабельность)</h2>
+                  <p>SEO анализ мета-описания помогает понять, как описание влияет на кликабельность страницы, и как это
+                    влияет на её видимость в поисковой выдаче. Повышение CTR способствует росту органического трафика.
+                  </p>
+
+                  <!-- [wt_location get='region_name_prepositional'] {get} -->
+                  <h2>Как проверка мета-описания сайта помогает найти SEO ошибки</h2>
+                  <p>Проверка мета-описания позволяет выявить неточности и ошибки, которые могут препятствовать
+                    эффективному продвижению. Исправление этих ошибок улучшит взаимодействие с пользователями и
+                    поисковыми системами.</p>
+
+                </div>
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
             </div>
+            <div class="analytics_page_item d-flex align-items-center justify-content-between">
+              <div class="analytics_page_item_left">
+                <h2 class="section_title">
+                  <span>05.</span> Анализ
+                  <a href="#" class="button">Meta Keywords </a>
+                  <br />
+                  ключевых слов страницы сайта
+                  <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
+                </h2>
+                <div class="hiden_text">
+                  <h2>Как анализ ключевых слов страницы сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    может
+                    повлиять на ваш SEO успех
+                  </h2>
+                  <p>Ключевые слова страницы — это важный элемент для правильной индексации, даже если современные
+                    поисковые системы не используют их напрямую. Однако их грамотное применение способствует лучшей
+                    структуре сайта и улучшает видимость в менее популярных поисковых системах.</p>
+
+                  <h2>Что важно учитывать при аудите ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    для повышения SEO эффективности
+                  </h2>
+                  <p>Аудит ключевых слов помогает точно оценить, насколько выбранные фразы соответствуют содержанию
+                    страницы и интересам вашей целевой аудитории, что играет решающую роль в SEO продвижении.</p>
+
+                  <h2>Как правильно проверять ключевые слова сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    для эффективного SEO продвижения
+                  </h2>
+                  <p>Проверка ключевых слов позволяет убедиться в их актуальности и точности, что является важным
+                    фактором для успешной индексации и повышения видимости сайта в поисковой выдаче.</p>
+
+                  <h2>Как SEO анализ ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    помогает
+                    улучшить позиции в поисковой выдаче
+                  </h2>
+                  <p>SEO анализ ключевых слов позволяет выявить актуальные и релевантные фразы для каждой страницы, что
+                    способствует повышению позиций сайта и росту органического трафика.</p>
+
+                  <h2>Что важно учитывать при SEO аудите ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    для повышения релевантности
+                  </h2>
+                  <p>SEO аудит ключевых слов помогает оптимизировать семантическое ядро, чтобы поисковые системы точно
+                    воспринимали содержание страниц и показывали их в ответ на соответствующие запросы.</p>
+
+                  <h2>Как проверка ключевых слов на сайте
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    помогает
+                    улучшить индексацию
+                  </h2>
+                  <p>Проверка точности и релевантности ключевых слов играет важную роль для качественной индексации
+                    сайта и повышения его видимости в поисковых системах.</p>
+
+                  <h2>Как провести бесплатный анализ ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    с помощью онлайн инструментов
+                  </h2>
+                  <p>Бесплатные онлайн инструменты помогут выявить ошибки в подборе ключевых фраз и предложат пути для
+                    их улучшения, что повысит эффективность SEO стратегии.</p>
+
+                  <h2>Как быстро и эффективно анализировать ключевые слова сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    онлайн
+                  </h2>
+                  <p>Онлайн анализ ключевых слов позволяет быстро оценить, насколько хорошо выбранные фразы
+                    соответствуют содержанию страницы, что помогает оптимизировать SEO стратегию.</p>
+
+                  <h2>Почему аудит ключевых слов для SEO продвижения сайта
+                    <!-- [wt_location get='region_name_prepositional']{get} -->
+                    так важен для успешного результата
+                  </h2>
+                  <p>Аудит ключевых слов помогает выявить оптимальные фразы, которые приведут к улучшению позиций в
+                    поисковых системах и увеличат целевой трафик.</p>
+
+                  <h2>Как SEO аудит ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    помогает
+                    улучшить контент и SEO показатели
+                  </h2>
+                  <p>SEO аудит ключевых слов критичен для того, чтобы убедиться, что ваш контент правильно оптимизирован
+                    и соответствует запросам пользователей, что способствует улучшению SEO показателей.</p>
+
+                  <h2>Как анализ ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    помогает
+                    увеличить трафик и видимость
+                  </h2>
+                  <p>SEO анализ ключевых слов помогает выявить наиболее релевантные фразы, которые улучшают видимость
+                    сайта в поисковых системах и способствуют росту органического трафика.</p>
+
+                  <h2>Как проверить ключевые слова сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    для
+                    достижения максимальных SEO результатов
+                  </h2>
+                  <p>Проверка ключевых слов помогает оптимизировать стратегию SEO, улучшить контент и повысить видимость
+                    сайта в поисковой выдаче, что важно для эффективного продвижения.</p>
+                </div>
+
+                <a href="#" class="button no_bg">Развернуть текст</a>
+              </div>
+              <div class="item_image">
+                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                <picture>
+                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
+                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                </picture>
+              </div>
+            </div>
+            <div class="analytics_page_item d-flex align-items-center justify-content-between">
+
+              <div class="item_image">
+                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                <picture>
+                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
+                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                </picture>
+              </div>
+              <div class="analytics_page_item_left">
+                <div class="analytics_page_item_left_top text-end">
+                  <span class="number">06.</span>
+                  <h2 class="section_title">
+                    Анализ
+                    <a href="#" class="button">SEO-заголовков</a>
+                    <br />
+                    &lt;h1&gt;, &lt;h2&gt;, &lt;h3&gt;, &lt;h4&gt;, &lt;h5&gt;, &lt;h6&gt;страницы сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
+                  </h2>
+                </div>
+                <div class="hiden_text text-end">
+                  <h2>Как анализ SEO заголовков страницы сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> может улучшить структуру контента
+                  </h2>
+                  <p>SEO заголовки, такие как H1, H2, H3, играют ключевую роль в организации контента. Эти заголовки
+                    делают страницу более доступной как для пользователей, так и для поисковых систем, что способствует
+                    лучшему ранжированию и структурированию контента.</p>
+
+                  <h2>Как аудит SEO заголовков страницы сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> помогает оптимизировать структуру
+                  </h2>
+                  <p>Аудит SEO заголовков позволяет проверить правильность их использования на странице. Это важный
+                    элемент SEO, который влияет на восприятие страницы поисковыми системами и помогает улучшить её
+                    видимость в результатах поиска.</p>
+
+                  <h2>Как проверка SEO заголовков на сайте <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> улучшает юзабилити и восприятие контента
+                  </h2>
+                  <p>Проверка использования заголовков помогает убедиться, что они правильно структурированы и отражают
+                    логическую последовательность страницы. Это делает контент удобным для пользователей и помогает
+                    поисковым системам легче индексировать сайт.</p>
+
+                  <h2>Как SEO анализ SEO заголовков страницы сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> улучшает видимость в поисковых системах
+                  </h2>
+                  <p>SEO анализ заголовков помогает выявить, насколько эффективно заголовки отражают ключевые темы
+                    страницы. Структурированные и релевантные заголовки повышают видимость страницы в поисковой выдаче.
+                  </p>
+
+                  <h2>Почему SEO аудит SEO заголовков страницы сайта
+                    <!--[wt_location get='region_name_prepositional']--> <!--{get}--> важен для релевантности
+                  </h2>
+                  <p>Аудит SEO заголовков помогает выявить, насколько правильно используются ключевые слова и
+                    соответствует ли структура заголовков запросам пользователей, что улучшает релевантность страницы.
+                  </p>
+
+                  <h2>Как SEO проверка SEO заголовков сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> помогает улучшить ранжирование
+                  </h2>
+                  <p>SEO проверка заголовков помогает выявить ошибки и неточности в их структуре, что может существенно
+                    повлиять на ранжирование страницы и её позиции в поисковых системах.</p>
+
+                  <h2>Как провести бесплатный анализ SEO заголовков страницы сайта
+                    <!--[wt_location get='region_name_prepositional']--> <!--{get}--> с помощью онлайн инструментов
+                  </h2>
+                  <p>Для анализа SEO заголовков можно использовать онлайн инструменты, которые помогут быстро выявить
+                    ошибки и предложат рекомендации для их оптимизации, улучшая эффективность SEO.</p>
+
+                  <h2>Как онлайн анализ SEO заголовков сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> помогает ускорить проверку
+                  </h2>
+                  <p>Онлайн анализ SEO заголовков позволяет быстро оценить их структуру и эффективность, что позволяет
+                    своевременно внести изменения для улучшения SEO и видимости страницы в поисковой выдаче.</p>
+
+                  <h2>Как аудит SEO заголовков помогает в продвижении сайта
+                    <!--[wt_location get='region_name_prepositional']--> <!--{get}-->
+                  </h2>
+                  <p>Аудит SEO заголовков позволяет убедиться, что каждый заголовок правильно структурирован и
+                    использует ключевые фразы, что способствует повышению SEO показателей и улучшению видимости сайта в
+                    поисковиках.</p>
+
+                  <h2>Как SEO аудит SEO заголовков страницы сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> помогает улучшить контент
+                  </h2>
+                  <p>SEO аудит заголовков помогает правильно структурировать контент, выделяя ключевые темы и улучшая
+                    восприятие пользователями, что способствует улучшению релевантности для поисковых систем.</p>
+
+                  <h2>Как анализ структуры SEO заголовков сайта <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> повышает эффективность SEO
+                  </h2>
+                  <p>Анализ структуры SEO заголовков помогает убедиться, что заголовки правильно используются,
+                    соответствуют логике страницы и поддерживают SEO стратегию, что повышает посещаемость и рейтинг
+                    сайта.</p>
+
+                  <h2>Почему проверка SEO заголовков на сайте <!--[wt_location get='region_name_prepositional']-->
+                    <!--{get}--> важна для улучшения позиций в поисковой выдаче
+                  </h2>
+                  <p>Проверка SEO заголовков помогает обнаружить слабые места в структуре страницы и оптимизировать их
+                    для повышения позиций в поисковой выдаче и улучшения удобства для пользователей.</p>
+                </div>
+
+                <a href="#" class="button no_bg">Развернуть текст</a>
+              </div>
+            </div>
+
           </div>
         </div>
       </section>
