--- a/index.html
+++ b/index.html
@@ -689,7 +689,6 @@
               </div>
             </div>
             <div class="analytics_page_item d-flex align-items-center justify-content-between">
-
               <div class="item_image">
                 <img src="assets/images/bg_item_img.png" alt="" class="bg" />
                 <picture>
@@ -793,7 +792,119 @@
                 <a href="#" class="button no_bg">Развернуть текст</a>
               </div>
             </div>
+            <div class="analytics_page_item d-flex align-items-center justify-content-between">
+              <div class="analytics_page_item_left">
+                <h2 class="section_title">
+                  <span>07.</span> Анализ
+                  <a href="#" class="button">Отображения в поиск</a>
+                  <br />
+                  вид страницы сайта
+                  <!-- [wt_location get='region_name_prepositional'] {get}[/wt_location] -->
+                </h2>
+                <div class="hiden_text">
+                  <h2>Как анализ ключевых слов страницы сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    может
+                    повлиять на ваш SEO успех
+                  </h2>
+                  <p>Ключевые слова страницы — это важный элемент для правильной индексации, даже если современные
+                    поисковые системы не используют их напрямую. Однако их грамотное применение способствует лучшей
+                    структуре сайта и улучшает видимость в менее популярных поисковых системах.</p>
 
+                  <h2>Что важно учитывать при аудите ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    для повышения SEO эффективности
+                  </h2>
+                  <p>Аудит ключевых слов помогает точно оценить, насколько выбранные фразы соответствуют содержанию
+                    страницы и интересам вашей целевой аудитории, что играет решающую роль в SEO продвижении.</p>
+
+                  <h2>Как правильно проверять ключевые слова сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    для эффективного SEO продвижения
+                  </h2>
+                  <p>Проверка ключевых слов позволяет убедиться в их актуальности и точности, что является важным
+                    фактором для успешной индексации и повышения видимости сайта в поисковой выдаче.</p>
+
+                  <h2>Как SEO анализ ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    помогает
+                    улучшить позиции в поисковой выдаче
+                  </h2>
+                  <p>SEO анализ ключевых слов позволяет выявить актуальные и релевантные фразы для каждой страницы, что
+                    способствует повышению позиций сайта и росту органического трафика.</p>
+
+                  <h2>Что важно учитывать при SEO аудите ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    для повышения релевантности
+                  </h2>
+                  <p>SEO аудит ключевых слов помогает оптимизировать семантическое ядро, чтобы поисковые системы точно
+                    воспринимали содержание страниц и показывали их в ответ на соответствующие запросы.</p>
+
+                  <h2>Как проверка ключевых слов на сайте
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    помогает
+                    улучшить индексацию
+                  </h2>
+                  <p>Проверка точности и релевантности ключевых слов играет важную роль для качественной индексации
+                    сайта и повышения его видимости в поисковых системах.</p>
+
+                  <h2>Как провести бесплатный анализ ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    с помощью онлайн инструментов
+                  </h2>
+                  <p>Бесплатные онлайн инструменты помогут выявить ошибки в подборе ключевых фраз и предложат пути для
+                    их улучшения, что повысит эффективность SEO стратегии.</p>
+
+                  <h2>Как быстро и эффективно анализировать ключевые слова сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    онлайн
+                  </h2>
+                  <p>Онлайн анализ ключевых слов позволяет быстро оценить, насколько хорошо выбранные фразы
+                    соответствуют содержанию страницы, что помогает оптимизировать SEO стратегию.</p>
+
+                  <h2>Почему аудит ключевых слов для SEO продвижения сайта
+                    <!-- [wt_location get='region_name_prepositional']{get} -->
+                    так важен для успешного результата
+                  </h2>
+                  <p>Аудит ключевых слов помогает выявить оптимальные фразы, которые приведут к улучшению позиций в
+                    поисковых системах и увеличат целевой трафик.</p>
+
+                  <h2>Как SEO аудит ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    помогает
+                    улучшить контент и SEO показатели
+                  </h2>
+                  <p>SEO аудит ключевых слов критичен для того, чтобы убедиться, что ваш контент правильно оптимизирован
+                    и соответствует запросам пользователей, что способствует улучшению SEO показателей.</p>
+
+                  <h2>Как анализ ключевых слов сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get} -->
+                    помогает
+                    увеличить трафик и видимость
+                  </h2>
+                  <p>SEO анализ ключевых слов помогает выявить наиболее релевантные фразы, которые улучшают видимость
+                    сайта в поисковых системах и способствуют росту органического трафика.</p>
+
+                  <h2>Как проверить ключевые слова сайта
+                    <!-- [wt_location get='region_name_prepositional'] {get}  -->
+                    для
+                    достижения максимальных SEO результатов
+                  </h2>
+                  <p>Проверка ключевых слов помогает оптимизировать стратегию SEO, улучшить контент и повысить видимость
+                    сайта в поисковой выдаче, что важно для эффективного продвижения.</p>
+                </div>
+
+                <a href="#" class="button no_bg">Развернуть текст</a>
+              </div>
+              <div class="item_image">
+                <img src="assets/images/bg_item_img.png" alt="" class="bg" />
+                <picture>
+                  <source media="(max-width: 767px)" srcset="assets/images/seo_img.png" />
+                  <source media="(min-width: 768px)" srcset="assets/images/seo_page_img1.png" />
+                  <img src="assets/images/seo_page_img1.png" alt="Adaptiv rasm" />
+                </picture>
+              </div>
+            </div>
           </div>
         </div>
       </section>
